--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@
             <p class="h1">
               I'd love to hear from you.
               Whether you have an electrical issue,
-              want to chat about or problem, or just want to chat — shoot me a message.
+              want to chat about your problem, or just want to chat — shoot me a message.
             </p>
           </div>  <!-- class="column 1g-12" -->
         </div> <!-- class="row contact-top" -->
